# IsaevFI3-Sim3-Lab3

./: CMakeLists.txt  README.md
postfix/: CMakeLists.txt  main.cpp
postfixLib/: CMakeLists.txt  TFormula.cpp  TFormula.h  TStack.h
test/: test_tformula.cpp
